crates/atlas-runtime/tests/corpus/pass/modules/multi_import/main.atl
// Test: import multiple names from one module
import { double, triple, SCALE } from "./utils";

print(double(5));
print(triple(5));
print(SCALE);
