crates/atlas-runtime/tests/corpus/fail/modules/unknown_export/main.atl
// Test: import a name that doesn't exist in the module
import { subtract } from "./math";

subtract(5, 3);
